--- a/index.html
+++ b/index.html
@@ -14,7 +14,19 @@
     <header>
         <h1 class="page-title"> Taskinator</h1>
         <p>Click the button below to add a new task!</p>
-        <button class="btn" id="save-task"> Add Task</button>
+        <form id="task-form">
+            <div class="form-group">
+                <select name="task-type"  class="select-dropdown">
+                    <option value="" disabled selected>Pick a task type</option>
+                    <option value="Print">Print</option>
+                    <option value="Web">Web</option>
+                    <option value="Mobile">Mobile</option>
+                </select>
+                <input type="text" name="task-name" class="text-input" placeholder="Enter Task Name" />
+            </div>
+            <button class="btn" id="save-task"> Add Task</button>
+
+        </form>
         <!--This part is for order all the task's-->
         <main class="page-content">
             <section class="task-list-wrapper">
